[package]
name = "vid2img"
description = "Use video content as collection of images."
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "MIT"
categories = ["multimedia"]
repository = "https://github.com/rafaelcaricio/vid2img"
keywords = ["gstreamer", "multimedia", "audio", "video"]

[dependencies]
glib = "0.14.0"
gstreamer = "0.17.0"
gstreamer-app = "0.17.0"
gstreamer-video = "0.17.0"
log = "0.4"
